Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17839

Missing feedback when importing build fails

    XMLWordPrintable

Details

    • bfe35997681e54f6610c1db09fd2955eaf110418 (qt-creator/qt-creator/master)

    Description

      1. Open a project.
      2. Go to Projects mode.
      3. Click on "Import Existing Build...".
      4. Select an arbitrary directory and click "Choose".
        Nothing will happen.

      Creator should give the user a feedback that and why importing a build failed.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-17839
          # Subject Branch Project Status CR V

          Activity

            People

              kandeler Christian Kandeler
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes