ProjectExplorer: Don't let the "import project" action fail silently

Fixes: QTCREATORBUG-17839
Change-Id: I3c57ca36f793aa1858558024566518c0dfdb4097
Reviewed-by: hjk <hjk@qt.io>